Fixed e2e test